# slurm-template

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
configs/: .flake8  mypy.ini  pytest.ini  tox.ini
extensions/rust_ext/: Cargo.toml  pyproject.toml
extensions/rust_ext/src/: _os.rs  lib.rs
project/: cli.py  ddp.py
project/datasets/: __init__.py  image_folder.py
project/models/: __init__.py  vit.py
project/trainers/: __init__.py  _trainer.py  base_trainer.py  ckpter.py  denoise.py  logger.py  optims.py  runs.py  versions.py
project/trainers/utils/: checkpoint.py  logger.py  lr_lambda.py  optims.py
project/transforms/: __init__.py  mods.py
scripts/: submit.sbatch
tests/: test_image_folder.py
